--- a/lib/Makefile
+++ b/lib/Makefile
@@ -131,6 +131,8 @@ obj-$(CONFIG_CLZ_TAB) += clz_tab.o
 
 obj-$(CONFIG_QMI_ENCDEC) += qmi_encdec.o
 
+obj-$(CONFIG_GENERIC_STRNCPY_FROM_USER) += strncpy_from_user.o
+
 hostprogs-y	:= gen_crc32table
 clean-files	:= crc32table.h
 
