--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -123,6 +123,15 @@ config CPU_FREQ_DEFAULT_GOV_SMARTMAX
 	help
       Use the CPUFreq governor 'smartmax' as default
 
+config CPU_FREQ_DEFAULT_GOV_BACON
+	bool "bacon"
+	select CPU_FREQ_GOV_BACON
+	help
+	  Use the CPUFreq governor 'bacon' as default. This allows
+	  you to get a full dynamic cpu frequency capable system by simply
+	  loading your cpufreq low-level hardware driver, using the
+	  'bacon' governor for latency-sensitive workloads.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -200,6 +209,24 @@ config LGE_LOW_BATT_LIMIT
 	tristate "to prevent UVLO at low voltage"
 	depends on CPU_FREQ
 	default n
+
+config CPU_FREQ_GOV_BACON
+	tristate "'bacon' cpufreq policy governor"
+	help
+	  'bacon' - This driver adds a dynamic cpufreq policy governor
+	  designed for latency-sensitive workloads.
+
+	  This governor attempts to reduce the latency of clock
+	  increases so that the system is more responsive to
+	  interactive workloads.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_bacon.
+
+	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
+
 config CPU_FREQ_GOV_CONSERVATIVE
 	tristate "'conservative' cpufreq governor"
 	depends on CPU_FREQ
