--- a/arch/arm/configs/d802_defconfig
+++ b/arch/arm/configs/d802_defconfig
@@ -55,7 +55,7 @@ CONFIG_CRYPTO_SHA256_ARM=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-lge_msm8974-caf"
+CONFIG_LOCALVERSION="-eternalKernel-caf"
 # CONFIG_LOCALVERSION_AUTO= is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -395,10 +395,10 @@ CONFIG_MACH_MSM8974_G2=y
 # CONFIG_MACH_MSM8974_G2_KT is not set
 # CONFIG_MACH_MSM8974_G2_VZW is not set
 # CONFIG_MACH_MSM8974_G2_SPR is not set
-CONFIG_MACH_MSM8974_G2_TMO_US=y
+# CONFIG_MACH_MSM8974_G2_TMO_US is not set
 # CONFIG_MACH_MSM8974_G2_DCM is not set
 # CONFIG_MACH_MSM8974_G2_KDDI is not set
-# CONFIG_MACH_MSM8974_G2_OPEN_COM is not set
+CONFIG_MACH_MSM8974_G2_OPEN_COM=y
 # CONFIG_MACH_MSM8974_G2_OPT_AU is not set
 # CONFIG_MACH_MSM8974_G2_TEL_AU is not set
 # CONFIG_MACH_MSM8974_G2_CA is not set
@@ -465,7 +465,7 @@ CONFIG_MACH_MSM8974_G2_TMO_US=y
 # CONFIG_MACH_MSM8974_G3_WIN is not set
 # CONFIG_MACH_MSM8974_DZNY_DCM is not set
 # CONFIG_LGE_SPECIFIC_PATCHES is not set
-CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-tmo_us"
+CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-open_com"
 # CONFIG_LGE_HANDLE_PANIC is not set
 CONFIG_LGE_BOOTLOADER_LOG=y
 # CONFIG_LGE_LCD_TUNING is not set
@@ -1079,10 +1079,7 @@ CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 # CONFIG_LG_VPN is not set
-CONFIG_LG_VPN_V33=y
-CONFIG_VPNCLIENT_SECURITY=y
-CONFIG_VPNCLIENT_PROC_UID=1000
-CONFIG_VPNCLIENT_PROC_GID=1000
+# CONFIG_LG_VPN_V33 is not set
 # CONFIG_IP_SET is not set
 # CONFIG_IP_VS is not set
 
@@ -2123,7 +2120,7 @@ CONFIG_BATTERY_BQ28400=y
 # CONFIG_LTC4088_CHARGER is not set
 CONFIG_BATTERY_BCL=y
 # CONFIG_CHARGER_SMB347 is not set
-CONFIG_QPNP_BMS=y
+# CONFIG_QPNP_BMS is not set
 CONFIG_LGE_PM=y
 CONFIG_ADC_READY_CHECK_JB=y
 CONFIG_LGE_CHARGER_TEMP_SCENARIO=y
@@ -2654,8 +2651,7 @@ CONFIG_RADIO_ADAPTERS=y
 # Texas Instruments WL128x FM driver (ST based)
 #
 # CONFIG_RADIO_WL128X is not set
-CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=m
+# CONFIG_RADIO_IRIS is not set
 
 #
 # Graphics support
@@ -2895,9 +2891,9 @@ CONFIG_SND_SOC_QDSP6V2=y
 CONFIG_AUDIO_OCMEM=y
 CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_MSM8974=y
-CONFIG_SND_SOC_APQ8074=y
-# CONFIG_SND_FM_RADIO is not set
-# CONFIG_SND_FM_SWTICH is not set
+# CONFIG_SND_SOC_APQ8074 is not set
+CONFIG_SND_FM_RADIO=y
+CONFIG_SND_FM_SWTICH=y
 CONFIG_HIFI_SOUND=y
 CONFIG_SND_LGE_EFFECT=y
 CONFIG_SND_LGE_NORMALIZER=y
@@ -3291,7 +3287,7 @@ CONFIG_SWITCH_MAX1462X=y
 # CONFIG_INPUT_MAX14688 is not set
 # CONFIG_LGE_HEADSET_MIC_NOISE_WA is not set
 CONFIG_LGE_HEADSET_INSERT_DELAY=y
-CONFIG_LGE_HEADSET_INSERT_ADDITIONAL_DELAY=y
+# CONFIG_LGE_HEADSET_INSERT_ADDITIONAL_DELAY is not set
 # CONFIG_ACCESSIBILITY is not set
 CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
@@ -3861,7 +3857,7 @@ CONFIG_CRYPTO_MD5=y
 #
 # Ciphers
 #
-# CONFIG_CRYPTO_AES is not set
+CONFIG_CRYPTO_AES=y
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
@@ -3898,8 +3894,7 @@ CONFIG_CRYPTO_DEV_QCE50=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
-# CONFIG_CRYPTO_DEV_KFIPS_PERF is not set
-CONFIG_CRYPTO_DEV_KFIPS=y
+# CONFIG_CRYPTO_DEV_KFIPS is not set
 CONFIG_BINARY_PRINTF=y
 
 #
