--- a/arch/arm/configs/ls980_defconfig
+++ b/arch/arm/configs/ls980_defconfig
@@ -35,6 +35,19 @@ CONFIG_GENERIC_BUG=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
+CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_HAS_MACH_MEMUTILS=y
+CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
+CONFIG_ARM_PLD_64BYTE=y
+CONFIG_ANDROID_LMK_ADJ_RBTREE=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
+CONFIG_KERNEL_MODE_NEON=y
+CONFIG_CRYPTO_AES_ARM=y
+# CONFIG_CRYPTO_AES_ARM_BS is not set
+# CONFIG_CRYPTO_SHA1_ARM is not set
+CONFIG_CRYPTO_SHA1_ARM_NEON=y
+CONFIG_CRYPTO_SHA256_ARM=y
+# CONFIG_CRYPTO_SHA512_ARM_NEON is not set
 
 #
 # General setup
@@ -42,8 +55,8 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-perf"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-eternalKernel-caf"
+# CONFIG_LOCALVERSION_AUTO= is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
@@ -224,10 +237,13 @@ CONFIG_EFI_PARTITION=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=y
+# CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_FIOPS=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_ROW=y
 # CONFIG_DEFAULT_CFQ is not set
@@ -378,11 +394,11 @@ CONFIG_MACH_MSM8974_G2=y
 # CONFIG_MACH_MSM8974_G2_SKT is not set
 # CONFIG_MACH_MSM8974_G2_KT is not set
 # CONFIG_MACH_MSM8974_G2_VZW is not set
-# CONFIG_MACH_MSM8974_G2_SPR is not set
+CONFIG_MACH_MSM8974_G2_SPR=y
 # CONFIG_MACH_MSM8974_G2_TMO_US is not set
 # CONFIG_MACH_MSM8974_G2_DCM is not set
 # CONFIG_MACH_MSM8974_G2_KDDI is not set
-CONFIG_MACH_MSM8974_G2_OPEN_COM=y
+# CONFIG_MACH_MSM8974_G2_OPEN_COM is not set
 # CONFIG_MACH_MSM8974_G2_OPT_AU is not set
 # CONFIG_MACH_MSM8974_G2_TEL_AU is not set
 # CONFIG_MACH_MSM8974_G2_CA is not set
@@ -449,7 +465,7 @@ CONFIG_MACH_MSM8974_G2_OPEN_COM=y
 # CONFIG_MACH_MSM8974_G3_WIN is not set
 # CONFIG_MACH_MSM8974_DZNY_DCM is not set
 # CONFIG_LGE_SPECIFIC_PATCHES is not set
-CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-open_com"
+CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-spr"
 # CONFIG_LGE_HANDLE_PANIC is not set
 CONFIG_LGE_BOOTLOADER_LOG=y
 # CONFIG_LGE_LCD_TUNING is not set
@@ -878,7 +894,6 @@ CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
 # CONFIG_IP_ROUTE_MULTIPATH is not set
 CONFIG_IP_ROUTE_VERBOSE=y
-CONFIG_IP_ROUTE_CLASSID=y
 CONFIG_IP_PNP=y
 CONFIG_IP_PNP_DHCP=y
 # CONFIG_IP_PNP_BOOTP is not set
@@ -900,9 +915,21 @@ CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
-# CONFIG_TCP_CONG_ADVANCED is not set
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
@@ -989,7 +1016,7 @@ CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 # CONFIG_NETFILTER_XT_TARGET_CT is not set
 # CONFIG_NETFILTER_XT_TARGET_DSCP is not set
 # CONFIG_NETFILTER_XT_TARGET_HL is not set
-CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
+# CONFIG_NETFILTER_XT_TARGET_IDLETIMER is not set
 # CONFIG_NETFILTER_XT_TARGET_LED is not set
 CONFIG_NETFILTER_XT_TARGET_LOG=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
@@ -1051,7 +1078,10 @@ CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 # CONFIG_LG_VPN is not set
-# CONFIG_LG_VPN_V33 is not set
+CONFIG_LG_VPN_V33=y
+CONFIG_VPNCLIENT_SECURITY=y
+CONFIG_VPNCLIENT_PROC_UID=1000
+CONFIG_VPNCLIENT_PROC_GID=1000
 # CONFIG_IP_SET is not set
 # CONFIG_IP_VS is not set
 
@@ -1196,17 +1226,17 @@ CONFIG_NET_SCH_INGRESS=y
 # Classification
 #
 CONFIG_NET_CLS=y
-CONFIG_NET_CLS_BASIC=y
-CONFIG_NET_CLS_TCINDEX=y
-CONFIG_NET_CLS_ROUTE4=y
+# CONFIG_NET_CLS_BASIC is not set
+# CONFIG_NET_CLS_TCINDEX is not set
+# CONFIG_NET_CLS_ROUTE4 is not set
 CONFIG_NET_CLS_FW=y
 CONFIG_NET_CLS_U32=y
-CONFIG_CLS_U32_PERF=y
+# CONFIG_CLS_U32_PERF is not set
 CONFIG_CLS_U32_MARK=y
-CONFIG_NET_CLS_RSVP=y
-CONFIG_NET_CLS_RSVP6=y
+# CONFIG_NET_CLS_RSVP is not set
+# CONFIG_NET_CLS_RSVP6 is not set
 CONFIG_NET_CLS_FLOW=y
-CONFIG_NET_CLS_CGROUP=y
+# CONFIG_NET_CLS_CGROUP is not set
 CONFIG_NET_EMATCH=y
 CONFIG_NET_EMATCH_STACK=32
 CONFIG_NET_EMATCH_CMP=y
@@ -1216,16 +1246,15 @@ CONFIG_NET_EMATCH_META=y
 CONFIG_NET_EMATCH_TEXT=y
 CONFIG_NET_CLS_ACT=y
 # CONFIG_NET_ACT_POLICE is not set
-CONFIG_NET_ACT_GACT=y
-CONFIG_GACT_PROB=y
-CONFIG_NET_ACT_MIRRED=y
-CONFIG_NET_ACT_IPT=y
-CONFIG_NET_ACT_NAT=y
-CONFIG_NET_ACT_PEDIT=y
-CONFIG_NET_ACT_SIMP=y
-CONFIG_NET_ACT_SKBEDIT=y
-CONFIG_NET_ACT_CSUM=y
-CONFIG_NET_CLS_IND=y
+# CONFIG_NET_ACT_GACT is not set
+# CONFIG_NET_ACT_MIRRED is not set
+# CONFIG_NET_ACT_IPT is not set
+# CONFIG_NET_ACT_NAT is not set
+# CONFIG_NET_ACT_PEDIT is not set
+# CONFIG_NET_ACT_SIMP is not set
+# CONFIG_NET_ACT_SKBEDIT is not set
+# CONFIG_NET_ACT_CSUM is not set
+# CONFIG_NET_CLS_IND is not set
 CONFIG_NET_SCH_FIFO=y
 # CONFIG_DCB is not set
 # CONFIG_DNS_RESOLVER is not set
@@ -1302,12 +1331,12 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_NFC is not set
 CONFIG_LGE_NFC=y
 # CONFIG_LGE_NFC_PN544_C2 is not set
-# CONFIG_LGE_NFC_PN544_C3 is not set
+CONFIG_LGE_NFC_PN544_C3=y
 # CONFIG_LGE_NFC_PN547_C2 is not set
-# CONFIG_LGE_NFC_PRESTANDBY is not set
-# CONFIG_LGE_NFC_MULTICORE_FASTBOOT is not set
-# CONFIG_LGE_NFC_SET_IRQ_WAKEUP is not set
-# CONFIG_LGE_NFC_DEBUG_MESSAGE is not set
+CONFIG_LGE_NFC_PRESTANDBY=y
+CONFIG_LGE_NFC_MULTICORE_FASTBOOT=y
+CONFIG_LGE_NFC_SET_IRQ_WAKEUP=y
+CONFIG_LGE_NFC_DEBUG_MESSAGE=y
 CONFIG_LGE_NFC_USE_PMIC=y
 # CONFIG_LGE_NFC_HW_QCT_MSM72X7A is not set
 # CONFIG_LGE_NFC_HW_QCT_APQ8064 is not set
@@ -1321,7 +1350,7 @@ CONFIG_LGE_NFC_USE_PMIC=y
 CONFIG_NFC_QNCI=y
 # CONFIG_LGE_NFC_SONY is not set
 # CONFIG_CXD2235AGG_GJ_KDDI is not set
-CONFIG_NFC_BCM2079X=y
+# CONFIG_NFC_BCM2079X is not set
 # CONFIG_NFC_BCM43341 is not set
 
 #
@@ -1897,7 +1926,7 @@ CONFIG_DIAG_OVER_USB=y
 #
 # SLATE Support
 #
-# CONFIG_LGE_SLATE is not set
+CONFIG_LGE_SLATE=y
 
 #
 # SDIO support for DIAG
@@ -1907,7 +1936,7 @@ CONFIG_DIAG_OVER_USB=y
 # HSIC/SMUX support for DIAG
 #
 CONFIG_LGE_DIAG_USB_ACCESS_LOCK=y
-# CONFIG_LGE_DIAG_ENABLE_SYSFS is not set
+CONFIG_LGE_DIAG_ENABLE_SYSFS=y
 
 #
 # LGE DM APP Support
@@ -2092,7 +2121,7 @@ CONFIG_BATTERY_BQ28400=y
 # CONFIG_LTC4088_CHARGER is not set
 CONFIG_BATTERY_BCL=y
 # CONFIG_CHARGER_SMB347 is not set
-# CONFIG_QPNP_BMS is not set
+CONFIG_QPNP_BMS=y
 CONFIG_LGE_PM=y
 CONFIG_ADC_READY_CHECK_JB=y
 CONFIG_LGE_CHARGER_TEMP_SCENARIO=y
@@ -2863,8 +2892,8 @@ CONFIG_SND_SOC_QDSP6V2=y
 CONFIG_AUDIO_OCMEM=y
 CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_MSM8974=y
-# CONFIG_SND_SOC_APQ8074 is not set
-CONFIG_SND_FM_RADIO=y
+CONFIG_SND_SOC_APQ8074=y
+# CONFIG_SND_FM_RADIO is not set
 CONFIG_SND_FM_SWTICH=y
 CONFIG_HIFI_SOUND=y
 CONFIG_SND_LGE_EFFECT=y
@@ -3139,13 +3168,12 @@ CONFIG_USB_G_LGE_ANDROID_AUTORUN_LGE=y
 # CONFIG_USB_G_LGE_ANDROID_VZWLAN is not set
 CONFIG_USB_G_LGE_ANDROID_CDROM_MAC_SUPPORT=y
 CONFIG_USB_G_LGE_ANDROID_NCM=y
-CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT=y
+# CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT is not set
 # CONFIG_USB_DWC3_MSM_VZW_SUPPORT is not set
 # CONFIG_DWC3_MSM_CDP_SUPPORT is not set
 # CONFIG_DWC3_MSM_BC_12_VZW_SUPPORT is not set
-CONFIG_USB_G_LGE_MULTIPLE_CONFIGURATION=y
-CONFIG_USB_G_LGE_MULTICONFIG_ATF_WA=y
-# CONFIG_USB_G_LGE_SERIALNO_REDIRECTION is not set
+# CONFIG_USB_G_LGE_MULTIPLE_CONFIGURATION is not set
+CONFIG_USB_G_LGE_SERIALNO_REDIRECTION=y
 CONFIG_USB_EMBEDDED_BATTERY_REBOOT=y
 
 #
@@ -3259,7 +3287,7 @@ CONFIG_SWITCH_MAX1462X=y
 # CONFIG_INPUT_MAX14688 is not set
 # CONFIG_LGE_HEADSET_MIC_NOISE_WA is not set
 CONFIG_LGE_HEADSET_INSERT_DELAY=y
-# CONFIG_LGE_HEADSET_INSERT_ADDITIONAL_DELAY is not set
+CONFIG_LGE_HEADSET_INSERT_ADDITIONAL_DELAY=y
 # CONFIG_ACCESSIBILITY is not set
 CONFIG_RTC_LIB=y
 CONFIG_RTC_CLASS=y
@@ -3820,8 +3848,8 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD160 is not set
 # CONFIG_CRYPTO_RMD256 is not set
 # CONFIG_CRYPTO_RMD320 is not set
-CONFIG_CRYPTO_SHA1=y
-CONFIG_CRYPTO_SHA256=y
+# CONFIG_CRYPTO_SHA1 is not set
+# CONFIG_CRYPTO_SHA256 is not set
 # CONFIG_CRYPTO_SHA512 is not set
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
@@ -3866,7 +3894,8 @@ CONFIG_CRYPTO_DEV_QCE50=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
-# CONFIG_CRYPTO_DEV_KFIPS is not set
+# CONFIG_CRYPTO_DEV_KFIPS_PERF is not set
+CONFIG_CRYPTO_DEV_KFIPS=y
 CONFIG_BINARY_PRINTF=y
 
 #
