--- a/arch/arm/configs/vs980_defconfig
+++ b/arch/arm/configs/vs980_defconfig
@@ -35,6 +35,19 @@ CONFIG_GENERIC_BUG=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
+CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_HAS_MACH_MEMUTILS=y
+CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
+CONFIG_ARM_PLD_64BYTE=y
+CONFIG_ANDROID_LMK_ADJ_RBTREE=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
+CONFIG_KERNEL_MODE_NEON=y
+CONFIG_CRYPTO_AES_ARM=y
+# CONFIG_CRYPTO_AES_ARM_BS is not set
+# CONFIG_CRYPTO_SHA1_ARM is not set
+CONFIG_CRYPTO_SHA1_ARM_NEON=y
+CONFIG_CRYPTO_SHA256_ARM=y
+# CONFIG_CRYPTO_SHA512_ARM_NEON is not set
 
 #
 # General setup
@@ -42,8 +55,8 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-perf"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-eternalKernel-caf"
+# CONFIG_LOCALVERSION_AUTO= is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
@@ -224,10 +237,13 @@ CONFIG_EFI_PARTITION=y
 # IO Schedulers
 #
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_TEST=y
+# CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_FIOPS=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_ROW=y
 # CONFIG_DEFAULT_CFQ is not set
@@ -372,12 +388,12 @@ CONFIG_MACH_LGE=y
 # LGE Board Selection
 #
 CONFIG_MACH_MSM8974_G2=y
-CONFIG_MACH_MSM8974_G2_KR=y
+# CONFIG_MACH_MSM8974_G2_KR is not set
 # CONFIG_MACH_MSM8974_G2_LGU is not set
 # CONFIG_MACH_MSM8974_G2_ATT is not set
-CONFIG_MACH_MSM8974_G2_SKT=y
+# CONFIG_MACH_MSM8974_G2_SKT is not set
 # CONFIG_MACH_MSM8974_G2_KT is not set
-# CONFIG_MACH_MSM8974_G2_VZW is not set
+CONFIG_MACH_MSM8974_G2_VZW=y
 # CONFIG_MACH_MSM8974_G2_SPR is not set
 # CONFIG_MACH_MSM8974_G2_TMO_US is not set
 # CONFIG_MACH_MSM8974_G2_DCM is not set
@@ -449,7 +465,7 @@ CONFIG_MACH_MSM8974_G2_SKT=y
 # CONFIG_MACH_MSM8974_G3_WIN is not set
 # CONFIG_MACH_MSM8974_DZNY_DCM is not set
 # CONFIG_LGE_SPECIFIC_PATCHES is not set
-CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-kr"
+CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-vzw"
 # CONFIG_LGE_HANDLE_PANIC is not set
 CONFIG_LGE_BOOTLOADER_LOG=y
 # CONFIG_LGE_LCD_TUNING is not set
@@ -872,7 +888,7 @@ CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 CONFIG_NET_KEY_MIGRATE=y
 CONFIG_INET=y
-CONFIG_IP_MULTICAST=y
+# CONFIG_IP_MULTICAST is not set
 CONFIG_IP_ADVANCED_ROUTER=y
 # CONFIG_IP_FIB_TRIE_STATS is not set
 CONFIG_IP_MULTIPLE_TABLES=y
@@ -884,7 +900,6 @@ CONFIG_IP_PNP_DHCP=y
 # CONFIG_IP_PNP_RARP is not set
 # CONFIG_NET_IPIP is not set
 # CONFIG_NET_IPGRE_DEMUX is not set
-# CONFIG_IP_MROUTE is not set
 # CONFIG_ARPD is not set
 # CONFIG_SYN_COOKIES is not set
 CONFIG_INET_AH=y
@@ -902,20 +917,18 @@ CONFIG_INET_TCP_DIAG=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_WESTWOOD=m
-CONFIG_TCP_CONG_HTCP=m
-# CONFIG_TCP_CONG_HSTCP is not set
-# CONFIG_TCP_CONG_HYBLA is not set
-# CONFIG_TCP_CONG_VEGAS is not set
-# CONFIG_TCP_CONG_SCALABLE is not set
-# CONFIG_TCP_CONG_LP is not set
-# CONFIG_TCP_CONG_VENO is not set
-# CONFIG_TCP_CONG_YEAH is not set
-# CONFIG_TCP_CONG_ILLINOIS is not set
-CONFIG_DEFAULT_BIC=y
-# CONFIG_DEFAULT_CUBIC is not set
-# CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="bic"
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_HTCP=y
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_DEFAULT_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_PRIVACY=y
@@ -964,8 +977,8 @@ CONFIG_NF_CONNTRACK_MARK=y
 # CONFIG_NF_CONNTRACK_SECMARK is not set
 CONFIG_NF_CONNTRACK_PROCFS=y
 CONFIG_NF_CONNTRACK_EVENTS=y
-CONFIG_NF_CONNTRACK_TIMEOUT=y
-CONFIG_NF_CONNTRACK_TIMESTAMP=y
+# CONFIG_NF_CONNTRACK_TIMEOUT is not set
+# CONFIG_NF_CONNTRACK_TIMESTAMP is not set
 CONFIG_NF_CT_PROTO_DCCP=y
 CONFIG_NF_CT_PROTO_GRE=y
 CONFIG_NF_CT_PROTO_SCTP=y
@@ -1006,13 +1019,13 @@ CONFIG_NETFILTER_XT_TARGET_IDLETIMER=y
 # CONFIG_NETFILTER_XT_TARGET_LED is not set
 CONFIG_NETFILTER_XT_TARGET_LOG=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
-CONFIG_NETFILTER_XT_TARGET_NFLOG=y
+# CONFIG_NETFILTER_XT_TARGET_NFLOG is not set
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_NOTRACK is not set
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
 # CONFIG_NETFILTER_XT_TARGET_TEE is not set
-CONFIG_NETFILTER_XT_TARGET_TPROXY=y
-CONFIG_NETFILTER_XT_TARGET_TRACE=y
+# CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
+# CONFIG_NETFILTER_XT_TARGET_TRACE is not set
 # CONFIG_NETFILTER_XT_TARGET_SECMARK is not set
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
@@ -1023,7 +1036,7 @@ CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_MATCH_ADDRTYPE is not set
 # CONFIG_NETFILTER_XT_MATCH_CLUSTER is not set
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
-CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
+# CONFIG_NETFILTER_XT_MATCH_CONNBYTES is not set
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
 CONFIG_NETFILTER_XT_MATCH_CONNMARK=y
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
@@ -1064,7 +1077,10 @@ CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 # CONFIG_LG_VPN is not set
-# CONFIG_LG_VPN_V33 is not set
+CONFIG_LG_VPN_V33=y
+CONFIG_VPNCLIENT_SECURITY=y
+CONFIG_VPNCLIENT_PROC_UID=1000
+CONFIG_VPNCLIENT_PROC_GID=1000
 # CONFIG_IP_SET is not set
 # CONFIG_IP_VS is not set
 
@@ -1082,7 +1098,7 @@ CONFIG_IP_NF_MATCH_ECN=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
-CONFIG_IP_NF_TARGET_REJECT_SKERR=y
+# CONFIG_IP_NF_TARGET_REJECT_SKERR is not set
 # CONFIG_IP_NF_TARGET_ULOG is not set
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_NEEDED=y
@@ -1130,7 +1146,7 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_TARGET_HL is not set
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
-CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
+# CONFIG_IP6_NF_TARGET_REJECT_SKERR is not set
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 # CONFIG_IP6_NF_SECURITY is not set
@@ -1185,24 +1201,24 @@ CONFIG_NET_SCHED=y
 #
 # Queueing/Scheduling
 #
-CONFIG_NET_SCH_CBQ=y
+# CONFIG_NET_SCH_CBQ is not set
 CONFIG_NET_SCH_HTB=y
-CONFIG_NET_SCH_HFSC=y
+# CONFIG_NET_SCH_HFSC is not set
 CONFIG_NET_SCH_PRIO=y
-CONFIG_NET_SCH_MULTIQ=y
-CONFIG_NET_SCH_RED=y
-CONFIG_NET_SCH_SFB=y
-CONFIG_NET_SCH_SFQ=y
-CONFIG_NET_SCH_TEQL=y
-CONFIG_NET_SCH_TBF=y
-CONFIG_NET_SCH_GRED=y
-CONFIG_NET_SCH_DSMARK=y
-CONFIG_NET_SCH_NETEM=y
-CONFIG_NET_SCH_DRR=y
-CONFIG_NET_SCH_MQPRIO=y
-CONFIG_NET_SCH_CHOKE=y
-CONFIG_NET_SCH_QFQ=y
-CONFIG_NET_SCH_INGRESS=y
+# CONFIG_NET_SCH_MULTIQ is not set
+# CONFIG_NET_SCH_RED is not set
+# CONFIG_NET_SCH_SFB is not set
+# CONFIG_NET_SCH_SFQ is not set
+# CONFIG_NET_SCH_TEQL is not set
+# CONFIG_NET_SCH_TBF is not set
+# CONFIG_NET_SCH_GRED is not set
+# CONFIG_NET_SCH_DSMARK is not set
+# CONFIG_NET_SCH_NETEM is not set
+# CONFIG_NET_SCH_DRR is not set
+# CONFIG_NET_SCH_MQPRIO is not set
+# CONFIG_NET_SCH_CHOKE is not set
+# CONFIG_NET_SCH_QFQ is not set
+# CONFIG_NET_SCH_INGRESS is not set
 # CONFIG_NET_SCH_PLUG is not set
 
 #
@@ -1330,7 +1346,7 @@ CONFIG_LGE_NFC_USE_PMIC=y
 # CONFIG_LGE_NFC_HW_TI_OMAP4430 is not set
 # CONFIG_LGE_NFC_HW_NV_AP3X is not set
 # CONFIG_NFC_PN533 is not set
-# CONFIG_NFC_QNCI is not set
+CONFIG_NFC_QNCI=y
 # CONFIG_LGE_NFC_SONY is not set
 # CONFIG_CXD2235AGG_GJ_KDDI is not set
 CONFIG_NFC_BCM2079X=y
@@ -1459,7 +1475,7 @@ CONFIG_TI_DRV2667=y
 CONFIG_LGE_IRRC=y
 CONFIG_EARJACK_DEBUGGER=y
 CONFIG_BU52031NVX=y
-# CONFIG_BU52031NVX_CARKIT is not set
+CONFIG_BU52031NVX_CARKIT=y
 # CONFIG_LGE_IRDA_KDDI is not set
 # CONFIG_C2PORT is not set
 
@@ -2108,16 +2124,16 @@ CONFIG_QPNP_BMS=y
 CONFIG_LGE_PM=y
 CONFIG_ADC_READY_CHECK_JB=y
 CONFIG_LGE_CHARGER_TEMP_SCENARIO=y
-# CONFIG_LGE_WLC_CHARGER_TEMP_SCENARIO is not set
+CONFIG_LGE_WLC_CHARGER_TEMP_SCENARIO=y
 CONFIG_LGE_PM_PWR_KEY_FOR_CHG_LOGO=y
-# CONFIG_SMB349_VZW_FAST_CHG is not set
+CONFIG_SMB349_VZW_FAST_CHG=y
 CONFIG_WIRELESS_CHARGER=y
-# CONFIG_BQ51051B_CHARGER is not set
-CONFIG_BQ51053B_CHARGER=y
+CONFIG_BQ51051B_CHARGER=y
+# CONFIG_BQ51053B_CHARGER is not set
 # CONFIG_FTT_CHARGER_V3 is not set
 CONFIG_MAX17048_FUELGAUGE=y
 # CONFIG_MAX17050_FUELGAUGE is not set
-CONFIG_LGE_PM_BATTERY_ID_CHECKER=y
+# CONFIG_LGE_PM_BATTERY_ID_CHECKER is not set
 CONFIG_LGE_CURRENTNOW=y
 # CONFIG_LGE_ONLY_READ_CURRENT is not set
 # CONFIG_BQ24192_CHARGER is not set
@@ -2126,7 +2142,7 @@ CONFIG_LGE_CURRENTNOW=y
 # CONFIG_CHARGER_UNIFIED_WLC is not set
 # CONFIG_LGE_PM_LLK_MODE is not set
 # CONFIG_LGE_SMART_CHARGING is not set
-# CONFIG_LGE_G2_EMBEDDED_BATT is not set
+CONFIG_LGE_G2_EMBEDDED_BATT=y
 # CONFIG_VZW_LLK is not set
 CONFIG_LGE_PM_BATTERY_BATT_ADC_G2_BASE=y
 CONFIG_LGE_PM_CHARGING_TEMP_SCENARIO_V1_7=y
@@ -2878,7 +2894,7 @@ CONFIG_SND_SOC_QDSP6V2=y
 CONFIG_AUDIO_OCMEM=y
 CONFIG_DOLBY_DAP=y
 CONFIG_SND_SOC_MSM8974=y
-# CONFIG_SND_SOC_APQ8074 is not set
+CONFIG_SND_SOC_APQ8074=y
 # CONFIG_SND_FM_RADIO is not set
 # CONFIG_SND_FM_SWTICH is not set
 CONFIG_HIFI_SOUND=y
@@ -3147,21 +3163,21 @@ CONFIG_RMNET_SMD_CTL_CHANNEL=""
 CONFIG_RMNET_SMD_DATA_CHANNEL=""
 CONFIG_USB_G_LGE_ANDROID=y
 CONFIG_USB_G_LGE_ANDROID_PFSC=y
-CONFIG_USB_G_LGE_ANDROID_STORAGE_NAME="Android Platform"
+CONFIG_USB_G_LGE_ANDROID_STORAGE_NAME="VS980"
 CONFIG_USB_G_LGE_ANDROID_AUTORUN=y
-# CONFIG_USB_G_LGE_ANDROID_AUTORUN_VZW is not set
-CONFIG_USB_G_LGE_ANDROID_AUTORUN_LGE=y
+CONFIG_USB_G_LGE_ANDROID_AUTORUN_VZW=y
+# CONFIG_USB_G_LGE_ANDROID_AUTORUN_LGE is not set
 # CONFIG_USB_G_LGE_ANDROID_VZWLAN is not set
 CONFIG_USB_G_LGE_ANDROID_CDROM_MAC_SUPPORT=y
 CONFIG_USB_G_LGE_ANDROID_NCM=y
-CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT=y
-# CONFIG_USB_DWC3_MSM_VZW_SUPPORT is not set
+# CONFIG_USB_G_LGE_ANDROID_DIAG_OSP_SUPPORT is not set
+CONFIG_USB_DWC3_MSM_VZW_SUPPORT=y
 # CONFIG_DWC3_MSM_CDP_SUPPORT is not set
-# CONFIG_DWC3_MSM_BC_12_VZW_SUPPORT is not set
+CONFIG_DWC3_MSM_BC_12_VZW_SUPPORT=y
 CONFIG_USB_G_LGE_MULTIPLE_CONFIGURATION=y
 CONFIG_USB_G_LGE_MULTICONFIG_ATF_WA=y
 # CONFIG_USB_G_LGE_SERIALNO_REDIRECTION is not set
-# CONFIG_USB_EMBEDDED_BATTERY_REBOOT is not set
+CONFIG_USB_EMBEDDED_BATTERY_REBOOT=y
 
 #
 # OTG and related infrastructure
@@ -3507,12 +3523,10 @@ CONFIG_CORESIGHT_EVENT=m
 #
 # LGE Broadcast Device Support
 #
-CONFIG_LGE_BROADCAST_TDMB=y
 
 #
 # LGE Japanese Mobile Broadcast(ISDB-T 1seg/ISDB-Tmm 13seg) Device Support
 #
-CONFIG_LGE_BROADCAST_TDMB_FC8050=y
 # CONFIG_BIF is not set
 # CONFIG_SENSORS is not set
 
@@ -3591,28 +3605,7 @@ CONFIG_TMPFS=y
 # CONFIG_TMPFS_XATTR is not set
 # CONFIG_HUGETLB_PAGE is not set
 # CONFIG_CONFIGFS_FS is not set
-CONFIG_MISC_FILESYSTEMS=y
-# CONFIG_ADFS_FS is not set
-# CONFIG_AFFS_FS is not set
-CONFIG_ECRYPT_FS=y
-# CONFIG_HFS_FS is not set
-# CONFIG_HFSPLUS_FS is not set
-# CONFIG_BEFS_FS is not set
-# CONFIG_BFS_FS is not set
-# CONFIG_EFS_FS is not set
-# CONFIG_LOGFS is not set
-# CONFIG_CRAMFS is not set
-# CONFIG_SQUASHFS is not set
-# CONFIG_VXFS_FS is not set
-# CONFIG_MINIX_FS is not set
-# CONFIG_OMFS_FS is not set
-# CONFIG_HPFS_FS is not set
-# CONFIG_QNX4FS_FS is not set
-# CONFIG_QNX6FS_FS is not set
-# CONFIG_ROMFS_FS is not set
-# CONFIG_PSTORE is not set
-# CONFIG_SYSV_FS is not set
-# CONFIG_UFS_FS is not set
+# CONFIG_MISC_FILESYSTEMS is not set
 # CONFIG_NETWORK_FILESYSTEMS is not set
 CONFIG_NLS=y
 CONFIG_NLS_DEFAULT="iso8859-1"
@@ -3769,7 +3762,7 @@ CONFIG_PID_IN_CONTEXTIDR=y
 # Security options
 #
 CONFIG_KEYS=y
-CONFIG_ENCRYPTED_KEYS=y
+# CONFIG_ENCRYPTED_KEYS is not set
 # CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 CONFIG_SECURITY=y
@@ -3806,14 +3799,14 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
-CONFIG_CRYPTO_RNG=y
+CONFIG_CRYPTO_RNG=m
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
 # CONFIG_CRYPTO_USER is not set
 CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
-CONFIG_CRYPTO_GF128MUL=y
+# CONFIG_CRYPTO_GF128MUL is not set
 CONFIG_CRYPTO_NULL=y
 # CONFIG_CRYPTO_PCRYPT is not set
 CONFIG_CRYPTO_WORKQUEUE=y
@@ -3837,7 +3830,7 @@ CONFIG_CRYPTO_CBC=y
 CONFIG_CRYPTO_ECB=y
 # CONFIG_CRYPTO_LRW is not set
 # CONFIG_CRYPTO_PCBC is not set
-CONFIG_CRYPTO_XTS=y
+# CONFIG_CRYPTO_XTS is not set
 
 #
 # Hash modes
@@ -3858,8 +3851,8 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD160 is not set
 # CONFIG_CRYPTO_RMD256 is not set
 # CONFIG_CRYPTO_RMD320 is not set
-CONFIG_CRYPTO_SHA1=y
-CONFIG_CRYPTO_SHA256=y
+# CONFIG_CRYPTO_SHA1 is not set
+# CONFIG_CRYPTO_SHA256 is not set
 # CONFIG_CRYPTO_SHA512 is not set
 # CONFIG_CRYPTO_TGR192 is not set
 # CONFIG_CRYPTO_WP512 is not set
@@ -3900,11 +3893,12 @@ CONFIG_CRYPTO_ANSI_CPRNG=m
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_QCE50=y
 # CONFIG_FIPS_ENABLE is not set
-# CONFIG_CRYPTO_DEV_QCRYPTO is not set
+CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
-# CONFIG_CRYPTO_DEV_KFIPS is not set
+# CONFIG_CRYPTO_DEV_KFIPS_PERF is not set
+CONFIG_CRYPTO_DEV_KFIPS=y
 CONFIG_BINARY_PRINTF=y
 
 #
