--- a/arch/arm/configs/ls980_defconfig
+++ b/arch/arm/configs/ls980_defconfig
@@ -3857,7 +3857,7 @@ CONFIG_CRYPTO_MD5=y
 #
 # Ciphers
 #
-CONFIG_CRYPTO_AES=y
+# CONFIG_CRYPTO_AES is not set
 # CONFIG_CRYPTO_ANUBIS is not set
 CONFIG_CRYPTO_ARC4=y
 # CONFIG_CRYPTO_BLOWFISH is not set
