--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -428,3 +428,5 @@ obj-$(CONFIG_ARCH_MSM8974) += lge_moca_drv.o
 obj-$(CONFIG_HAS_MACH_MEMUTILS) += memutils/
 
 obj-$(CONFIG_MSM_HOTPLUG) += msm_hotplug.o
+
+obj-$(CONFIG_FORCE_FAST_CHARGE) += fastchg.o
