configs: Disable a lot of useless debugging and things

--- a/arch/arm/configs/d802_defconfig
+++ b/arch/arm/configs/d802_defconfig
@@ -481,7 +481,7 @@ CONFIG_MACH_MSM8974_G2_OPEN_COM=y
 # CONFIG_LGE_SPECIFIC_PATCHES is not set
 CONFIG_DTS_TARGET="lge/msm8974-g2/msm8974-g2-open_com"
 # CONFIG_LGE_HANDLE_PANIC is not set
-CONFIG_LGE_BOOTLOADER_LOG=y
+# CONFIG_LGE_BOOTLOADER_LOG is not set
 # CONFIG_LGE_LCD_TUNING is not set
 # CONFIG_LGE_PSEUDO_CHG_UI is not set
 CONFIG_LGE_BOOTLOADER_TIME_CHECKER=y
@@ -536,8 +536,8 @@ CONFIG_MSM_N_WAY_SMSM=y
 CONFIG_MSM_SMP2P=y
 CONFIG_MSM_SMP2P_TEST=y
 CONFIG_MSM_RESET_MODEM=m
-CONFIG_MSM_SMD_LOGGING=y
-CONFIG_MSM_IPC_LOGGING=y
+# CONFIG_MSM_SMD_LOGGING is not set
+# CONFIG_MSM_IPC_LOGGING is not set
 CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
@@ -586,10 +586,10 @@ CONFIG_MSM_PIL_VENUS=y
 # CONFIG_MSM_PIL_PRONTO is not set
 CONFIG_MSM_SCM=y
 CONFIG_MSM_BUSPM_DEV=m
-CONFIG_MSM_TZ_LOG=y
-CONFIG_MSM_RPM_LOG=y
-CONFIG_MSM_RPM_STATS_LOG=y
-CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
+# CONFIG_MSM_TZ_LOG is not set
+# CONFIG_MSM_RPM_LOG is not set
+# CONFIG_MSM_RPM_STATS_LOG is not set
+# CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG is not set
 CONFIG_MSM_DIRECT_SCLK_ACCESS=y
 CONFIG_IOMMU_API=y
 CONFIG_MSM_GPIOMUX=y
@@ -599,9 +599,9 @@ CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_BUS_SCALING=y
 # CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED is not set
 CONFIG_MSM_WATCHDOG_V2=y
-CONFIG_MSM_MEMORY_DUMP=y
+# CONFIG_MSM_MEMORY_DUMP is not set
 # CONFIG_MSM_DLOAD_MODE is not set
-CONFIG_MSM_JTAG=y
+# CONFIG_MSM_JTAG is not set
 # CONFIG_MSM_JTAG_MM is not set
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
 CONFIG_MSM_RUN_QUEUE_STATS=y
@@ -624,23 +624,11 @@ CONFIG_MSM_L2_SPM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_MSM_OCMEM=y
 CONFIG_MSM_OCMEM_LOCAL_POWER_CTRL=y
-CONFIG_MSM_OCMEM_DEBUG=y
-# CONFIG_MSM_OCMEM_NONSECURE is not set
-# CONFIG_MSM_OCMEM_POWER_DEBUG is not set
-# CONFIG_MSM_OCMEM_DEBUG_ALWAYS_ON is not set
-# CONFIG_MSM_OCMEM_POWER_DISABLE is not set
+# CONFIG_MSM_OCMEM_DEBUG is not set
 CONFIG_SENSORS_ADSP=y
-CONFIG_MSM_RTB=y
-CONFIG_MSM_RTB_SEPARATE_CPUS=y
+# CONFIG_MSM_RTB is not set
 # CONFIG_MSM_EBI_ERP is not set
-CONFIG_MSM_CACHE_ERP=y
-CONFIG_MSM_L1_ERR_PANIC=y
-# CONFIG_MSM_L1_RECOV_ERR_PANIC is not set
-CONFIG_MSM_L1_ERR_LOG=y
-CONFIG_MSM_L2_ERP_PRINT_ACCESS_ERRORS=y
-CONFIG_MSM_L2_ERP_PORT_PANIC=y
-# CONFIG_MSM_L2_ERP_1BIT_PANIC is not set
-CONFIG_MSM_L2_ERP_2BIT_PANIC=y
+# CONFIG_MSM_CACHE_ERP is not set
 # CONFIG_MSM_DCVS is not set
 # CONFIG_MSM_CPR is not set
 CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
@@ -1440,7 +1428,6 @@ CONFIG_OF_NET=y
 CONFIG_OF_SPI=y
 CONFIG_OF_SPMI=y
 CONFIG_OF_SLIMBUS=y
-CONFIG_OF_CORESIGHT=y
 CONFIG_OF_BATTERYDATA=y
 # CONFIG_PARPORT is not set
 CONFIG_BLK_DEV=y
@@ -1551,8 +1538,8 @@ CONFIG_CHR_DEV_SCH=y
 CONFIG_SCSI_MULTI_LUN=y
 CONFIG_SCSI_CONSTANTS=y
 CONFIG_SCSI_LOGGING=y
-CONFIG_SCSI_SCAN_ASYNC=y
-CONFIG_SCSI_WAIT_SCAN=m
+# CONFIG_SCSI_SCAN_ASYNC is not set
+# CONFIG_SCSI_WAIT_SCAN is not set
 
 #
 # SCSI Transports
@@ -3143,7 +3130,7 @@ CONFIG_USB_EHSET_TEST_FIXTURE=y
 # CONFIG_USB_QCOM_KS_BRIDGE is not set
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
-CONFIG_USB_GADGET_DEBUG_FILES=y
+# CONFIG_USB_GADGET_DEBUG_FILES is not set
 # CONFIG_USB_GADGET_DEBUG_FS is not set
 CONFIG_USB_GADGET_VBUS_DRAW=500
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=2
@@ -3525,27 +3512,7 @@ CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON=y
 CONFIG_MOBICORE_SUPPORT=m
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=m
-CONFIG_CORESIGHT=y
-CONFIG_HAVE_CORESIGHT_SINK=y
-CONFIG_CORESIGHT_FUSE=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_CSR=y
-CONFIG_CORESIGHT_TMC=y
-CONFIG_CORESIGHT_TPIU=y
-# CONFIG_CORESIGHT_ETB is not set
-CONFIG_CORESIGHT_FUNNEL=y
-CONFIG_CORESIGHT_REPLICATOR=y
-CONFIG_CORESIGHT_STM=y
-# CONFIG_CORESIGHT_STM_DEFAULT_ENABLE is not set
-CONFIG_CORESIGHT_HWEVENT=y
-CONFIG_CORESIGHT_ETM=y
-# CONFIG_CORESIGHT_ETM_DEFAULT_ENABLE is not set
-CONFIG_CORESIGHT_ETM_PCSAVE_DEFAULT_ENABLE=y
-# CONFIG_CORESIGHT_AUDIO_ETM is not set
-# CONFIG_CORESIGHT_MODEM_ETM is not set
-# CONFIG_CORESIGHT_WCN_ETM is not set
-# CONFIG_CORESIGHT_RPM_ETM is not set
-CONFIG_CORESIGHT_EVENT=m
+# CONFIG_CORESIGHT is not set
 
 #
 # LGE Broadcast Device Support
@@ -3655,11 +3622,11 @@ CONFIG_ECRYPT_FS=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
+# CONFIG_F2FS_STAT_FS is not set
 CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
-CONFIG_F2FS_CHECK_FS=y
+# CONFIG_F2FS_CHECK_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
@@ -3714,8 +3681,8 @@ CONFIG_NLS_UTF8=y
 #
 CONFIG_PRINTK_TIME=y
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
-CONFIG_ENABLE_WARN_DEPRECATED=y
-CONFIG_ENABLE_MUST_CHECK=y
+# CONFIG_ENABLE_WARN_DEPRECATED is not set
+# CONFIG_ENABLE_MUST_CHECK is not set
 CONFIG_FRAME_WARN=1024
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_STRIP_ASM_SYMS is not set
@@ -3723,15 +3690,15 @@ CONFIG_MAGIC_SYSRQ=y
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
-CONFIG_DEBUG_KERNEL=y
+# CONFIG_DEBUG_KERNEL is not set
 # CONFIG_DEBUG_SHIRQ is not set
 # CONFIG_LOCKUP_DETECTOR is not set
 # CONFIG_HARDLOCKUP_DETECTOR is not set
 # CONFIG_DETECT_HUNG_TASK is not set
-CONFIG_SCHED_DEBUG=y
+# CONFIG_SCHED_DEBUG is not set
 # CONFIG_SYSRQ_SCHED_DEBUG is not set
 # CONFIG_SCHEDSTATS is not set
-CONFIG_TIMER_STATS=y
+# CONFIG_TIMER_STATS is not set
 # CONFIG_DEBUG_OBJECTS is not set
 # CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
@@ -3740,7 +3707,7 @@ CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_RT_MUTEX_TESTER is not set
 # CONFIG_DEBUG_SPINLOCK is not set
-CONFIG_DEBUG_MUTEXES=y
+# CONFIG_DEBUG_MUTEXES is not set
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
